Fixing overflow bugs on mobile.

--- a/SuccessKit-child/style.css
+++ b/SuccessKit-child/style.css
@@ -2987,6 +2987,10 @@ body .strong-view.wpmtst-default .wpmtst-testimonial-image img {
     display: block;
 }
 
+.mobile-break{
+    display: none;
+}
+
 @media all and (max-width: 767px){
     .single-feature-testimonial h3 *{
         display: block;
@@ -2998,6 +3002,10 @@ body .strong-view.wpmtst-default .wpmtst-testimonial-image img {
 
     .single-feature-testimonial .desktop-break{
         display: none;
+    }
+
+    .mobile-break{
+        display: block;
     }
 
 }
